[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "morph_toolbox"
version = "0.1.0"
description = "A small toolbox for loading, converting, and visualizing neuron morphology (SWC) data."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Shuonan Chen" }]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["morph_toolbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
